# gedis

./: .eslintrc.cjs  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  test.yml
src/: App.vue  main.ts  style.css  updater.ts  useMitt.ts  userWorker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  macros.rs  main.rs  model.rs  node_info.rs  redis_log.rs
src-tauri/src/command/: conn.rs  key_ops.rs  mod.rs  state.rs  terminal.rs
src/apis/: conn_ops.ts  key_ops.ts  terminal_ops.ts
src/components/: Connection.vue  KeyList.vue  MenuBar.vue  MenuHeader.vue  MenuOperation.vue  RightOperations.vue  RightOpertions.vue  useConfig.ts  useResizeAsideWidth.ts
src/components/AsideBar/: index.vue
src/components/MenuBar/: Connection.vue  KeyList.vue  MenuHeader.vue  MenuOperation.vue  RightOpertions.vue  SubMenuTitle.vue  index.vue  useConfig.ts  useTree.ts
src/layout/: Header.vue  Tabs.vue  index.vue
src/router/: index.ts
src/scripts/: updater.mjs
src/store/: index.ts  redis.ts  tabs.ts  ui.ts
src/types/: .eslintrc-auto-import.json  auto-import.d.ts  components.d.ts  index.d.ts  redis.d.ts  redis.ts  vue-web-terminal.d.ts
src/util/: index.ts
src/views/detail/: FormDataView.vue  FormatViewer.vue  FormmatViewer.vue  KeyHash.vue  KeyList.vue  KeySet.vue  KeyStream.vue  KeyString.vue  KeyZSet.vue  ViewerJson.vue  ViewerText.vue  index.vue
src/views/home/: index.vue
src/views/info/: index.vue
src/views/terminal/: command.ts  commands.ts  history.ts  histroy.ts  index.vue
