[package]
name = "gedis"
version = "1.1.7"
description = "redis desktop manager"
authors = ["FengYouJun"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = [ "updater", "clipboard-write-text", "shell-open", "clipboard-read-text"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "time"] }
async-trait = "0.1"
enum_dispatch = "0.3"
csv = "1.2.2"

[dependencies.redis]
version = "0.23"
features = [
  "tokio-native-tls-comp", 
  "cluster-async", 
  "r2d2", 
  "connection-manager", 
  "ahash"
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
